Added line three

--- a/test.html
+++ b/test.html
@@ -6,5 +6,6 @@ My first website<br>
 My first change from local repo<br>
 <p>Adding line one </p>
 <p>Adding line two</P>
+<p>adding line three</p>
 </body>
 </html>
