--- a/test.html
+++ b/test.html
@@ -7,5 +7,6 @@ My first change from local repo<br>
 <p>Adding line one </p>
 <p>Adding line two</P>
 <p>adding line three</p>
+  <p>first change from remote  </p>
 </body>
 </html>
